# project_datascience

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  heroku.yml  manage.py  requirements.txt  run.sh
bestproject/: .gitignore  Dockerfile  heroku.yml  manage.py  pyproject.toml  requirements.txt  web6project.json
bestproject/bestproject/: asgi.py  settings.py  urls.py  wsgi.py
bestproject/dataproject/: .env  admin.py  apps.py  credentionals.py  load_download_img.py  models.py  read_model.py  urls.py  views.py  web6project.json
bestproject/dataproject/migrations/: 0001_initial.py  0002_files_user_id_alter_files_up_time.py  0003_alter_files_up_time_alter_files_user_id.py  0004_remove_files_name_remove_files_type_files_file_and_more.py  0005_image_delete_files.py  0006_image_image_id_alter_image_up_time.py  0007_alter_image_image_id_alter_image_up_time.py  0008_remove_image_image_remove_image_up_time_and_more.py
bestproject/dataproject/our_templates/: Login.css  Login.html  Main.css  Main.html  Registration.html  Storage.css  Storage.html
bestproject/dataproject/static/css/: Registration.css  nicepage.css
bestproject/dataproject/templates/dataproject/: index.html  login.html  registration.html  storage.html
